--- a/html/common/header.html
+++ b/html/common/header.html
@@ -1,142 +1,9 @@
 <div class="container-head">
 	<div class="row">
-		<nav class="navbar navbar-default navbar-static-top admin-nav J_admin_nav"><!-- 
-			<a class="left-toggle pull-left " href="javascript:;">
-				<img class="logo-pic" src="/img/logo.png" alt="logo加载失败">
-			</a> -->
+		<nav class="navbar navbar-default navbar-static-top admin-nav J_admin_nav">
 			<a class="pull-left logo-text menu-list-logo" href="javascript:;">
 				&nbsp;吉林省传输网络资源管理系统
 			</a>
-			<!-- <ul class="nav navbar-nav margin-left">
-				<li>
-			  		<span id="logoMenu0" class="menu-logo"><img src="/img/index.png" alt=""/></span>
-			  		<a id="Menu0" class="menu-list J_layer_1_menu " data-menu-id="0" href="javascript:;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;首页&nbsp;&nbsp;</a>
-			  	</li>
-			  	<li class="active">
-			  		<span id="logoMenu1" class="menu-logo"><img src="/img/client.png" alt=""/></span>
-			  		<a id="Menu1" class="menu-list J_layer_1_menu " data-menu-id="1" href="javascript:;">&nbsp;&nbsp;患者管理</a>
-			        <ul class="dropdown-menu arrow" aria-labelledby="dLabel">
-			            <li><a class="J_menu" href="javascript:;">患者管理</a></li>
-			            <li><a class="J_menu" href="javascript:;">会员管理</a></li>
-			            <li><a class="J_menu" href="javascript:;">来访管理</a></li>
-			            <li><a class="J_menu" href="javascript:;">积分管理</a></li>
-			            <li><a class="J_menu" href="javascript:;">问卷管理</a></li>
-			        </ul>
-			  	</li>
-			  	<li>
-			  		<span id="logoMenu2" class="menu-logo"><img src="/img/portrayal.png" alt=""/></span>
-			    	<a id="Menu2" class="menu-list J_layer_1_menu" data-menu-id="2" href="javascript:;">&nbsp;&nbsp;客户画像</a>
-			    	<ul class="dropdown-menu arrow" aria-labelledby="dLabel">
-			    	    <li><a class="J_menu" href="javascript:;">标签管理</a></li>
-			    	    <li><a class="J_menu" href="javascript:;">画像功能</a></li>
-			    	    <li><a class="J_menu" href="javascript:;">行为分析</a></li>
-			    	    <li><a class="J_menu" href="javascript:;">统计功能</a></li>
-			    	</ul>
-			    </li>
-			    <li>
-			    	<span id="logoMenu3" class="menu-logo"><img src="/img/e-crb.png" alt=""/></span>
-			        <a id="Menu3" class="menu-list J_layer_1_menu" data-menu-id="3" href="javascript:;">&nbsp;&nbsp;客户关怀</a>
-			        <ul class="dropdown-menu arrow" aria-labelledby="dLabel">
-			            <li><a class="J_menu" href="javascript:;">待开展活动</a></li>
-			            <li><a class="J_menu" href="javascript:;">进行中活动</a></li>
-			            <li><a class="J_menu" href="javascript:;">待办活动通知</a></li>
-			            <li><a class="J_menu" href="javascript:;">待办事项</a></li>
-			            <li><a class="J_menu" href="javascript:;">待办问卷</a></li>
-			            <li><a class="J_menu" href="javascript:;">模板管理</a></li>
-			        </ul>
-			    </li>
-			    <li>
-			    	<span id="logoMenu4" class="menu-logo"><img src="/img/system.png" alt=""/></span>
-			        <a id="Menu4" class="menu-list J_layer_1_menu" data-menu-id="3" href="javascript:;">&nbsp;&nbsp;系统管理</a>
-			         <ul class="dropdown-menu arrow" aria-labelledby="dLabel">
-			             <li><a class="J_menu" href="javascript:;">角色管理</a></li>
-			             <li><a class="J_menu" href="javascript:;">权限管理</a></li>
-			             <li><a class="J_menu" href="javascript:;">用户管理</a></li>
-			             <li><a class="J_menu" href="javascript:;">会员组管理</a></li>
-			             <li><a class="J_menu" href="javascript:;">字典值管理</a></li>
-			         </ul>
-			     </li>
-			</ul> -->
-			<!-- <ul class="nav navbar-nav hello-administrator pull-right">
-				<li>
-			  		<a class="menu-list J_adminInfo admin-hello" href="javascript:;">你好，管理员！<span class="caret"></span></a>
-			  		<ul class="dropdown-menu arrow" aria-labelledby="dLabel">
-				    	<li><a href="javascript:;"><i class="fa fa-user"></i>&nbsp;修改个人信息</a></li>
-				    	<li class="divider"></li>
-				    	<li><a href="javascript:;"><i class="fa fa-sign-out"></i>&nbsp;退出登录</a></li>
-				  	</ul>
-			  	</li>
-			  	<li>
-			  		<img class="pull-right img-responsive administrator" src="/img/admin.png" alt="管理员图片" title="管理员图片">
-			  	</li>
-			</ul> -->
 		</nav>
 	</div>
 </div>
-
-
-<!-- 侧边栏 -->
-<!-- <ul class="nav nav-pills nav-stacked sidebar pull-left col-sm-3">
-	<div class="bars">
-
-		<a class="pull-right header-menu" href="#"><i class="fa fa-exchange">&nbsp;</i></a>
-		<span class="nav-text">主菜单</span>
-	</div>
-	<li id="firstMenu1" class="active activeSidebar">
-		<a class="J_firstMenu" href="javascript:;"><i class="fa fa-list"></i>&nbsp;<span>患者管理</span><i class="fa fa-angle-right angle-right"></i></a>
-		<ul>
-		    <li><a class="J_menu" href="javascript:;">患者管理</a></li>
-	    	<li><a class="J_menu" href="javascript:;">会员管理</a></li>
-	    	<li><a class="J_menu" href="javascript:;">来访管理</a></li>
-	    	<li><a class="J_menu" href="javascript:;">积分管理</a></li>
-            <li><a class="J_menu" href="javascript:;">问卷管理</a></li>
-		</ul> 
-	</li>
-	<li id="firstMenu2" class="active" style="display: none;">
-		<a class="J_firstMenu" href="javascript:;"><i class="fa fa-list"></i>&nbsp;<span >客户画像</span><i class="fa fa-angle-right angle-right"></i></a>
-		<ul>
-			<li><a class="J_menu" href="javascript:;">标签管理</a></li>
-            <li><a class="J_menu" href="javascript:;">画像功能</a></li>
-            <li><a class="J_menu" href="javascript:;">行为分析</a></li>
-            <li><a class="J_menu" href="javascript:;">统计功能</a></li>	    		
-		</ul>
-	</li>
-	<li id="firstMenu3" class="active" style="display: none;">
-		<a  class="J_firstMenu" href="javascript:;"><i class="fa fa-list"></i>&nbsp;<span>客户关怀</span><i class="fa fa-angle-right angle-right"></i></a>
-		<ul>
-			<li class="active">
-				<a class="J_firstMenu" href="javascript:;">&nbsp;<span>活动管理</span><i class="fa fa-angle-right angle-right"></i></a>
-				<ul>
-					<li><a class="J_menu" href="javascript:;">待开展活动</a></li>
-		            <li><a class="J_menu" href="javascript:;">进行中活动</a></li>
-		            <li><a class="J_menu" href="javascript:;">已结束活动</a></li>  		
-				</ul>
-			</li>
-			<li class="active">
-				<a class="J_firstMenu" href="javascript:;">&nbsp;<span>活动管理</span><i class="fa fa-angle-right  angle-right"></i></a>
-				<ul>
-					<li><a class="J_menu" href="javascript:;">模板管理</a></li>
-				</ul>
-			</li>
-            <li class="active">
-				<a class="J_firstMenu" href="javascript:;">&nbsp;<span>活动管理</span><i class="fa fa-angle-right angle-right"></i></a>
-				<ul>
-					<li><a class="J_menu" href="javascript:;">待办活动通知</a></li>
-		            <li><a class="J_menu" href="javascript:;">待办事务</a></li>  
-		            <li><a class="J_menu" href="javascript:;">待办问卷</a></li>		
-				</ul>
-            </li>
-		</ul>
-	</li>
-	<li id="firstMenu4" class="active" style="display: none;">
-		<a class="J_firstMenu" href="javascript:;"><i class="fa fa-list"></i>&nbsp;<span>系统管理</span><i class="fa fa-angle-right angle-right"></i></a>
-		<ul>
-			<li><a class="J_menu" href="javascript:;">角色管理</a></li>
-            <li><a class="J_menu" href="javascript:;">权限管理</a></li>
-            <li><a class="J_menu" href="javascript:;">用户管理</a></li> 
-            <li><a class="J_menu" href="javascript:;">会员组管理</a></li>
-            <li><a class="J_menu" href="javascript:;">字典值管理</a></li>
-		</ul>
-	</li>
-</ul> -->
-
