--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div class="page clearfix">
             <div class="row">
                 
-                <div class="col-sm-7">
+                <div class="col-sm-8">
                     <h1>吉林省传输网络资源图</h1>
                     <div id="jilin_map" >
                     </div>
@@ -31,7 +31,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-5 tablewidth">
+                <div class="col-sm-4 tablewidth">
                     <div class="btnstyle">
                         <a href="javascript:;" class="btn btn-info sele">选择影响光缆段</a>
                         <a href="javascript:;" class="btn btn-info mark">清空标记所有影响段</a>
@@ -78,10 +78,10 @@
             </div>
         </div>        
     </body>
-    <script type="text/javascript" src="js/echarts.min.js" ></script>
-    <script type="text/javascript" src="js/jquery.min.js" ></script>
-    <script type="text/javascript" src="js/tool/bootstrap/bootstrap.min.js" ></script>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/index.css">
-    <script type="text/javascript" src="/js/index.js" ></script>
+    <script type="text/javascript" src="/js/echarts.min.js" ></script>
+    <script type="text/javascript" src="/js/jquery.min.js" ></script>
+    <script type="text/javascript" src="/js/tool/bootstrap/bootstrap.min.js" ></script>
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <script type="text/javascript" src="index.js" ></script>
 </html>
